express.js api with new scope
