# Code/node/src/models/students.models.ts
@@ -6,17 +6,12 @@ export interface Student {
     age: number;
     email: string;
     phone: string;
-    courseId: number;
+    schoolId: number;
 }
 
 export const getStudents = async (): Promise<Student[]> => {
-    const queryText = 'SELECT * FROM Students';
-    return await query<Student>(queryText);
-};
-
-export const getStudent = async (id: number): Promise<Student> => {
-    const queryText = 'SELECT * FROM Students WHERE id = ?';
-    return (await query<Student>(queryText, [id]))[0];
+    const queryText = 'SELECT * FROM Students WHERE schoolId IS NULL';
+    return await query<Student>(queryText, []);
 };
 
 export const createStudent = async (student: Student): Promise<void> => {
@@ -28,3 +23,13 @@ export const deleteStudent = async (id: number): Promise<void> => {
     const queryText = 'DELETE FROM Students WHERE id = ?';
     await query(queryText, [id]);
 };
+
+export const enrollStudent = async (studentId: number, schoolId: number): Promise<void> => {
+    const queryText = 'UPDATE Students SET schoolId = ? WHERE id = ?';
+    await query(queryText, [schoolId, studentId]);
+};
+
+export const withdrawStudent = async (studentId: number): Promise<void> => {
+    const queryText = 'UPDATE Students SET schoolId = NULL WHERE id = ?';
+    await query(queryText, [studentId]);
+}
