# Code/node/src/routes/index.ts
@@ -1,14 +1,12 @@
 import { Router } from 'express';
-import coursesRouter from './courses.routes';
 import studentsRouter from './students.routes';
 import usersRouter from './users.routes';
-import enrollmentsRouter from './enrollments.routes';
+import schoolsRouter from './schools.routes';
 
 const router = Router();
 
-router.use('/courses', coursesRouter);
-router.use('/enroll', enrollmentsRouter);
 router.use('/students', studentsRouter);
 router.use('/users', usersRouter);
+router.use('/schools', schoolsRouter);
 
 export default router;
